apt-get debe correrse como root

--- a/extras/instalacion-ruby-on-rails/Vagrantfile
+++ b/extras/instalacion-ruby-on-rails/Vagrantfile
@@ -64,8 +64,8 @@ Vagrant.configure("2") do |config|
   # Puppet, Chef, Ansible, Salt, and Docker are also available. Please see the
   # documentation for more information about their specific syntax and use.
   config.vm.provision "shell", privileged: false, inline: <<-SHELL
-    apt-get update
-    apt-get install -y git-core subversion
+    sudo apt-get update
+    sudo apt-get install -y git-core subversion
     gpg --keyserver hkp://keys.gnupg.net --recv-keys 409B6B1796C275462A1703113804BB82D39DC0E3
     curl -sSL https://get.rvm.io | bash -s stable --rails --ruby
   SHELL
