--- a/extras/instalacion-ruby-on-rails/Vagrantfile
+++ b/extras/instalacion-ruby-on-rails/Vagrantfile
@@ -66,6 +66,8 @@ Vagrant.configure("2") do |config|
   config.vm.provision "shell", privileged: false, inline: <<-SHELL
     sudo apt-get update
     sudo apt-get install -y git-core subversion
+    curl -sL https://deb.nodesource.com/setup_10.x | sudo -E bash -
+    sudo apt-get install -y nodejs
     gpg --keyserver hkp://keys.gnupg.net --recv-keys 409B6B1796C275462A1703113804BB82D39DC0E3
     curl -sSL https://get.rvm.io | bash -s stable --rails --ruby
   SHELL
