--- a/extras/instalacion-ruby-on-rails/Vagrantfile
+++ b/extras/instalacion-ruby-on-rails/Vagrantfile
@@ -65,10 +65,17 @@ Vagrant.configure("2") do |config|
   # documentation for more information about their specific syntax and use.
   config.vm.provision "shell", privileged: false, inline: <<-SHELL
     sudo apt-get update
-    sudo apt-get install -y git-core subversion
+    sudo apt-get install -y build-essential git git-core libssl-dev subversion
+    # Installing NodeJS
     curl -sL https://deb.nodesource.com/setup_10.x | sudo -E bash -
     sudo apt-get install -y nodejs
+    # Installing Ruby on Rails
     gpg --keyserver hkp://keys.gnupg.net --recv-keys 409B6B1796C275462A1703113804BB82D39DC0E3
     curl -sSL https://get.rvm.io | bash -s stable --rails --ruby
+    # Installing wrk
+    git clone https://github.com/wg/wrk.git wrk
+    cd wrk
+    sudo make
+    sudo cp wrk /usr/local/bin
   SHELL
 end
