--- a/extras/instalacion-ruby-on-rails/Vagrantfile
+++ b/extras/instalacion-ruby-on-rails/Vagrantfile
@@ -77,5 +77,7 @@ Vagrant.configure("2") do |config|
     cd wrk
     sudo make
     sudo cp wrk /usr/local/bin
+    # cd a /vagrant
+    echo "cd /vagrant" >> .bash_profile
   SHELL
 end
