--- a/extras/instalacion-bnfc-haskell/Vagrantfile
+++ b/extras/instalacion-bnfc-haskell/Vagrantfile
@@ -66,7 +66,7 @@ Vagrant.configure("2") do |config|
   config.vm.provision "shell", privileged: false, inline: <<-SHELL
      sudo apt-get update -y
      sudo apt-get upgrade -y
-     sudo apt-get install -y build-essential haskell-platform
+     sudo apt-get install -y build-essential git haskell-platform
      sudo wget -O /tmp/bnfc-2.8.tar.gz https://github.com/BNFC/bnfc/releases/download/v2.8/bnfc-2.8-linux64.tar.gz
      sudo tar xvf /tmp/bnfc-2.8.tar.gz -C /tmp
      sudo mv /tmp/bnfc-2.8-linux64/* /usr/local/bin
